Auto-format by https://ultralytics.com/actions

--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -16,9 +16,10 @@
    ],
    "source": [
     "import torch\n",
+    "\n",
     "print(\"CUDA Available:\", torch.cuda.is_available())\n",
     "if torch.cuda.is_available():\n",
-    "    print(\"GPU Name:\", torch.cuda.get_device_name(0))\n"
+    "    print(\"GPU Name:\", torch.cuda.get_device_name(0))"
    ]
   },
   {
