--- a/Untitled1.ipynb
+++ b/Untitled1.ipynb
@@ -18,9 +18,10 @@
    ],
    "source": [
     "import torch\n",
+    "\n",
     "print(\"CUDA Available:\", torch.cuda.is_available())\n",
     "if torch.cuda.is_available():\n",
-    "    print(\"GPU:\", torch.cuda.get_device_name(0))\n"
+    "    print(\"GPU:\", torch.cuda.get_device_name(0))"
    ]
   },
   {
